# mwstack-authenticator

./: .dockerignore  .gitignore  Dockerfile  README.md  appconfig.yaml  docker-compose.yaml  mwstack-pipeline.yaml  pyproject.toml  secrets.yaml
app/: main.py  settings.py
app/api/v1/: user.py
app/db/: models.py  setup.py
app/models/: user.py
app/services/: email.py  security.py  user.py
frontend/: .yarnrc.yml  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  utils.ts
frontend/src/client/: index.ts
frontend/src/client/models/: ForgotPasswordRequest.ts  ForgotPasswordResetRequest.ts  ResetPasswordRequest.ts  UserCreateRaw.ts  UserRead.ts
frontend/src/client/services/: DefaultService.ts  UserService.ts
frontend/src/pages/: ForgotPasswordForm.tsx  ForgotPasswordResetForm.tsx  LoginForm.tsx  ResetPasswordForm.tsx  SignUpForm.tsx  index.tsx
migrations/: env.py
migrations/versions/: 9870fe9fab61_initial_setup.py
